# sumobot

./: .gitignore  CMakeLists.txt  build.ps1  firmware.map  ir-sensor.cpp  ir-sensor.hpp  main.cpp  platformio.ini
3d-model/: Mini Sumobot Size Checker.gcode  Mini Sumobot Size Checker.stl  chassis.STL  shield.STL  wheels.3mf  wheels.stl
3d-model/SolidWorks/: Boss-Extrude7.SLDPRT  Cut-Extrude17.SLDPRT  GP2Y0A21YK0F--3DModel-STEP-269445.STEP  Gear DC Motor Bracket.SLDPRT  SGM25-370 Motor.SLDPRT  VL53L0X.SLDPRT  chassis - Copy.SLDPRT  motors-platform.SLDPRT  robot - Copy.SLDASM  wheels.SLDPRT  ~$ESP32-DEVKITC-32D.SLDPRT
3d-model/SolidWorks/Male Standoffs/: M3_M_TO_F_5MM_STANDOFF.SLDPRT  M3_M_TO_F_STANDOFF.SLDPRT
TB6612FNG/: MODULE_ROB-14450.kicad_mod
esp32/: main.cpp
lib/LED/: LED.cpp  LED.hpp
lib/Motors/: Motors.cpp  Motors.hpp
lib/ToFSensor/: ToFSensor.cpp  ToFSensor.hpp
nano/: adc.h  config.h  logging.h  main.cpp  motors.h  sensors.h  systick.h
schematic/lib/ESP32-DEVKITC-32D/ESP32-DEVKITC-32D.pretty/: MODULE_ESP32-DEVKITC-32D.kicad_mod
schematic/libraries/: GP2Y0A21YK0F.kicad_sym
schematic/libraries/GP2Y0A21YK0F.pretty/: GP2Y0A21YK0F.kicad_mod
schematic/sumobot/: fp-info-cache  sumobot.kicad_pcb  sumobot.kicad_prl  sumobot.kicad_pro  sumobot.kicad_sch
schematic/v1/sumobot/: fp-info-cache  sumobot.kicad_pcb
schematic/v2/v2/: fp-info-cache  v2.kicad_pcb  v2.kicad_prl  v2.kicad_pro  v2.kicad_sch
src/: main.cpp
